--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,10 @@ main {
   align-items: center;
   font-size: 3rem;
 }
+
+span {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+  font-size: 1.5rem;
+}
